--- a/adote/src/layout/components/navbar/Navbar.scss
+++ b/adote/src/layout/components/navbar/Navbar.scss
@@ -3,11 +3,11 @@
 .navbar{
     height: 100px;
     width: 100vw;
-    background: $indigo;
+    background: white;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1rem 2rem;
+    padding: 1rem 3rem;
     
     .icon{
         font-size: 2.5rem;
