--- a/adote/src/pages/home/components/filter/Filter.scss
+++ b/adote/src/pages/home/components/filter/Filter.scss
@@ -1,8 +1,8 @@
-$border-color:#4485e0
-;
+$border-color:#030303;
 
 .autocomplete {
     position: relative;
+    z-index: 100;
 
     .search-icon {
         position: absolute;
@@ -43,7 +43,7 @@ $border-color:#4485e0
     border-radius: 1rem;
     padding: 1rem;
     background: white;
-    height: 200px;
+    height: 300px;
     width: 100%;
     margin-top: 2rem;
     box-shadow: 0px 0px 0px 5px $border-color;
