--- a/adote/src/pages/home/components/filter/Filter.scss
+++ b/adote/src/pages/home/components/filter/Filter.scss
@@ -30,10 +30,9 @@ $border-color:#030303;
     font-size: 1.25rem;
     font-weight: 500;
     width: 500px;
-    max-width: 50vw;
+    max-width: 90vw;
     border-radius: 1rem;
     &:focus {
-        box-shadow: 0px 0px 0px 5px $border-color;
         outline: none;
     }
 }
@@ -46,7 +45,7 @@ $border-color:#030303;
     height: 300px;
     width: 100%;
     margin-top: 2rem;
-    box-shadow: 0px 0px 0px 5px $border-color;
+    // box-shadow: 0px 0px 0px 5px $border-color;
     position: absolute;
     animation-duration: 0.3s;
 
@@ -77,11 +76,32 @@ $border-color:#030303;
     }
 }
 
+.backdrop{
+    @apply h-screen w-screen;
+    background: rgba(0,0,0, 0.7);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 99;
+}
+
+
+.stop-scrolling {
+    height: 100%;
+    overflow: hidden;
+}
+
 @keyframes overlayIn {
     0% {
         height: 0px;
     }
     100% {
         height: 200px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .autocomplete-overlay {
+        height: 160px;
     }
 }
