--- a/adote/src/pages/home/components/filter/Filter.scss
+++ b/adote/src/pages/home/components/filter/Filter.scss
@@ -1,4 +1,4 @@
-$border-color:#030303;
+$border-color: #030303;
 
 .autocomplete {
     position: relative;
@@ -10,7 +10,7 @@ $border-color:#030303;
         left: 5%;
         font-size: 1.5rem;
     }
-    .submit-btn{
+    .submit-btn {
         position: absolute;
         right: 0;
         top: 0;
@@ -44,7 +44,7 @@ $border-color:#030303;
     background: white;
     height: 300px;
     width: 100%;
-    margin-top: 2rem;
+    margin-top: 1.5rem;
     // box-shadow: 0px 0px 0px 5px $border-color;
     position: absolute;
     animation-duration: 0.3s;
@@ -63,6 +63,7 @@ $border-color:#030303;
         overflow: auto;
         border-radius: 1rem;
         padding: 0.5rem;
+        padding-top: 0;
         width: 100%;
         li {
             padding: 0.75rem 0.5rem;
@@ -76,16 +77,14 @@ $border-color:#030303;
     }
 }
 
-.backdrop{
-    @apply h-screen w-screen;
-    background: rgba(0,0,0, 0.7);
-    position: absolute;
+.backdrop {
+    @apply h-full w-screen;
+    background: rgba(0, 0, 0, 0.7);
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 99;
 }
-
-
 
 @keyframes overlayIn {
     0% {
@@ -99,5 +98,11 @@ $border-color:#030303;
 @media screen and (max-width: 768px) {
     .autocomplete-overlay {
         height: 160px;
+        margin-top: 1rem;
+        .overlay-content {
+            li {
+                padding: 0.5rem 0.25rem;
+            }
+        }
     }
 }
